--- a/frontend/src/app/korpa/korpa.component.html
+++ b/frontend/src/app/korpa/korpa.component.html
@@ -6,5 +6,6 @@
       <div class="datumOdrzavanja">{{ turnir.datumOdrzavanja }}</div>
       <div class="brojUcesnika">{{ turnir.brojUcesnika }}</div>
     </div>
+    <button class="primary">Kreiraj prijavu</button>
   </li>
 </ul>
