--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -4,3 +4,4 @@
 </button>
 <button (click)="navigirajNaKorpu()" routerLink="/korpa">Korpa</button>
 <button (click)="navigirajNaPocetnu()" routerLink="">Pocetna</button>
+<button (click)="navigirajNaProfil()" routerLink="">Profil</button>
