--- a/frontend/src/app/turnir/turnir.component.html
+++ b/frontend/src/app/turnir/turnir.component.html
@@ -3,4 +3,5 @@
   <p>Datum održavanja: {{ turnir.datumOdrzavanja }}</p>
   <p>Broj učesnika: {{ turnir.brojUcesnika }}</p>
   <button (click)="dodajTurnirUKorpu(turnir)">Dodaj u korpu</button>
+  <button (click)="prikaziPrijavljeneIgrace()">Prijavljeni ucesnici</button>
 </div>
