--- a/frontend/src/app/turnir/turnir.component.html
+++ b/frontend/src/app/turnir/turnir.component.html
@@ -2,6 +2,8 @@
   <h2>{{ turnir.naziv }}</h2>
   <p>Datum održavanja: {{ turnir.datumOdrzavanja }}</p>
   <p>Broj učesnika: {{ turnir.brojUcesnika }}</p>
+  <p>Minimalni rejting: {{ turnir.minRejting }}</p>
+  <p>Maksimalni rejting: {{ turnir.maxRejting }}</p>
   <button (click)="dodajTurnirUKorpu(turnir)">Dodaj u korpu</button>
   <button (click)="prikaziPrijavljeneIgrace()">Prijavljeni ucesnici</button>
 </div>
