--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -5,3 +5,6 @@
 <button (click)="navigirajNaKorpu()" routerLink="/korpa">Korpa</button>
 <button (click)="navigirajNaPocetnu()" routerLink="">Pocetna</button>
 <button (click)="navigirajNaProfil()" routerLink="">Profil</button>
+<button (click)="navigirajNaPrijavljivanje()" routerLink="Prijavljivanje">
+  Prijavi se
+</button>
