--- a/frontend/src/app/kreiranje-turnira/kreiranje-turnira.component.html
+++ b/frontend/src/app/kreiranje-turnira/kreiranje-turnira.component.html
@@ -22,12 +22,12 @@
       />
     </div>
     <div class="form-group">
-      <label for="brojUcesnika">Broj učesnika:</label>
+      <label for="maxBrojUcesnika">Broj učesnika:</label>
       <input
         type="number"
-        id="brojUcesnika"
-        name="brojUcesnika"
-        [(ngModel)]="turnir.brojUcesnika"
+        id="maxBrojUcesnika"
+        name="maxBrojUcesnika"
+        [(ngModel)]="turnir.maxBrojUcesnika"
         required
       />
     </div>
