--- a/frontend/src/app/turnir/turnir.component.html
+++ b/frontend/src/app/turnir/turnir.component.html
@@ -1,7 +1,7 @@
 <div class="turnir">
   <h2>{{ turnir.naziv }}</h2>
   <p>Datum održavanja: {{ turnir.datumOdrzavanja }}</p>
-  <p>Broj učesnika: {{ turnir.brojUcesnika }}</p>
+  <p>Broj učesnika: {{ turnir.maxBrojUcesnika }}</p>
   <p>Minimalni rejting: {{ turnir.minRejting }}</p>
   <p>Maksimalni rejting: {{ turnir.maxRejting }}</p>
   <button (click)="dodajTurnirUKorpu(turnir)">Dodaj u korpu</button>
