--- a/frontend/src/app/profil/profil.component.html
+++ b/frontend/src/app/profil/profil.component.html
@@ -1,5 +1,5 @@
 <div class="profil">
   <p>Ime: {{ igrac.ime }}</p>
   <p>Prezime: {{ igrac.prezime }}</p>
-  <p>Rejting: {{ igrac.rejting }}</p>
+  <p>Da li je vodja tima: {{ igrac.vodjaTima }}</p>
 </div>
