--- a/frontend/src/app/turnir/turnir.component.html
+++ b/frontend/src/app/turnir/turnir.component.html
@@ -1,9 +1,8 @@
 <div class="turnir">
   <h2>{{ turnir.naziv }}</h2>
   <p>Datum održavanja: {{ turnir.datumOdrzavanja }}</p>
+  <p>Mesto održavanja: {{ turnir.mestoOdrzavanja }}</p>
   <p>Broj učesnika: {{ turnir.maxBrojUcesnika }}</p>
-  <p>Minimalni rejting: {{ turnir.minRejting }}</p>
-  <p>Maksimalni rejting: {{ turnir.maxRejting }}</p>
   <button (click)="dodajTurnirUKorpu(turnir)">Dodaj u korpu</button>
   <button (click)="prikaziPrijavljeneIgrace()">Prijavljeni ucesnici</button>
 </div>
