--- a/frontend/src/app/profil/profil.component.html
+++ b/frontend/src/app/profil/profil.component.html
@@ -1,5 +1,7 @@
 <div class="profil">
+  <p>Korisnicko ime: {{ igrac.korisnickoIme }}</p>
+  <p></p>
   <p>Ime: {{ igrac.ime }}</p>
   <p>Prezime: {{ igrac.prezime }}</p>
-  <p>Da li je vodja tima: {{ igrac.vodjaTima }}</p>
+  <p>Vodja tima: {{ igrac.vodjaTima ? "Jeste" : "Nije" }}</p>
 </div>
