--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -4,7 +4,7 @@
 </button>
 <button (click)="navigirajNaKorpu()" routerLink="/korpa">Korpa</button>
 <button (click)="navigirajNaPocetnu()" routerLink="">Pocetna</button>
-<button (click)="navigirajNaProfil()" routerLink="">Profil</button>
+<button (click)="navigirajNaProfil()" routerLink="profil">Profil</button>
 <button (click)="navigirajNaPrijavljivanje()" routerLink="Prijavljivanje">
   Prijavi se
 </button>
