--- a/frontend/src/app/igraci-na-turniru/igraci-na-turniru.component.html
+++ b/frontend/src/app/igraci-na-turniru/igraci-na-turniru.component.html
@@ -5,7 +5,7 @@
 
   <ul>
     <li *ngFor="let igrac of prijavljeniIgraci$ | async">
-      <app-profil [igrac]="igrac"></app-profil>
+      <app-igrac [igrac]="igrac"></app-igrac>
     </li>
   </ul>
 </div>
