--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,3 +1,7 @@
+<!-- <div class="container">
+  <button (click)="navigirajNaProfil()" routerLink="profil">Profil</button>
+</div> -->
+
 <div class="container">
   <h1>Svi Turniri</h1>
   <ul>
@@ -5,10 +9,10 @@
       <app-turnir [turnir]="turnir"></app-turnir>
     </li>
   </ul>
-  <h1>Svi igraci</h1>
+  <!-- <h1>Svi igraci</h1>
   <ul>
     <li *ngFor="let igrac of sviIgraci$ | async">
       <app-igrac [igrac]="igrac"></app-igrac>
     </li>
-  </ul>
+  </ul> -->
 </div>
