--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -2,7 +2,7 @@
 <button (click)="navigirajNaKreiranjeTurnira()" routerLink="/kreiranjeTurnira">
   Kreiraj turnir
 </button>
-<button (click)="navigirajNaKorpu()" routerLink="/korpa">Korpa</button>
+<!-- <button (click)="navigirajNaKorpu()" routerLink="/korpa">Korpa</button> -->
 <button (click)="navigirajNaPocetnu()" routerLink="">Pocetna</button>
 <button (click)="navigirajNaProfil()" routerLink="profil">Profil</button>
 <button (click)="navigirajNaPrijavljivanje()" routerLink="Prijavljivanje">
