--- a/frontend/src/app/korpa/korpa.component.html
+++ b/frontend/src/app/korpa/korpa.component.html
@@ -1,4 +1,4 @@
-<p>turniri u korpi</p>
+<!-- <p>turniri u korpi</p>
 <div class="container">
   <ul>
     <li *ngFor="let turnir of sviTurniriUKorpi$ | async">
@@ -6,4 +6,4 @@
     </li>
     <button class="primary">Kreiraj prijavu</button>
   </ul>
-</div>
+</div> -->
