--- a/frontend/src/app/turnir/turnir.component.html
+++ b/frontend/src/app/turnir/turnir.component.html
@@ -3,7 +3,7 @@
   <p>Datum održavanja: {{ turnir.datumOdrzavanja }}</p>
   <p>Mesto održavanja: {{ turnir.mestoOdrzavanja }}</p>
   <p>Broj učesnika: {{ turnir.maxBrojUcesnika }}</p>
-  <button (click)="dodajTurnirUKorpu(turnir)">Dodaj u korpu</button>
+  <!-- <button (click)="dodajTurnirUKorpu(turnir)">Dodaj u korpu</button> -->
   <button (click)="prikaziPrijavljeneIgrace()">Prijavljeni ucesnici</button>
   <button (click)="PrijaviSeNaTurnir(turnir)">Prijavi se</button>
 </div>
