--- a/frontend/src/app/korpa/korpa.component.css
+++ b/frontend/src/app/korpa/korpa.component.css
@@ -1,11 +1,11 @@
-/* Stilizacija za <p> element */
+/* Stilizacija za <p> element 
 p {
   font-size: 1.5rem;
   font-weight: bold;
   margin-bottom: 10px;
 }
 
-/* Stilizacija za dugme */
+
 .container button.primary {
   background-color: #073d77;
   color: #fff;
@@ -16,7 +16,7 @@ p {
   margin-top: 10px;
 }
 
-/* Promena stila dugmeta na hover */
+
 .container button.primary:hover {
   background-color: #290680;
-}
+}*/
