--- a/frontend/src/app/svi-igraci/svi-igraci.component.html
+++ b/frontend/src/app/svi-igraci/svi-igraci.component.html
@@ -1,13 +1,13 @@
 <h1>Turnir je</h1>
-<ul>
-  <li *ngFor="let turnir of prijavljeniTurnir$ | async">
-    {{ turnir.naziv }}
-    <app-turnir [turnir]="turnir"></app-turnir>
-  </li>
-</ul>
-<h1>Svi igraci</h1>
-<ul>
-  <li *ngFor="let igrac of sviIgraci$ | async">
-    <app-igrac [igrac]="igrac"></app-igrac>
-  </li>
-</ul>
+<div *ngIf="prijavljeniTurnir | async as turnir">
+  <app-turnir [turnir]="turnir"></app-turnir>
+  <p>proba</p>
+  {{ turnir.naziv }}
+  <h1>Svi igraci</h1>
+  <ul>
+    <li *ngFor="let igrac of sviIgraci$ | async">
+      <app-igrac [igrac]="igrac"></app-igrac>
+      <button (click)="dodajIgracaUtim(igrac)">Dodaj u tim</button>
+    </li>
+  </ul>
+</div>
