--- a/frontend/src/app/turnir/turnir.component.html
+++ b/frontend/src/app/turnir/turnir.component.html
@@ -5,5 +5,5 @@
   <p>Broj učesnika: {{ turnir.maxBrojUcesnika }}</p>
   <!-- <button (click)="dodajTurnirUKorpu(turnir)">Dodaj u korpu</button> -->
   <button (click)="prikaziPrijavljeneIgrace()">Prijavljeni ucesnici</button>
-  <button (click)="PrijaviSeNaTurnir(turnir)">Prijavi se</button>
+  <button (click)="prijaviSeNaTurnir(turnir)">Prijavi se</button>
 </div>
