--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -8,3 +8,6 @@
 <button (click)="navigirajNaPrijavljivanje()" routerLink="Prijavljivanje">
   Prijavi se
 </button>
+<button (click)="navigirajNaPrijavu()" routerLink="prijava">
+  Pregledaj prijavu
+</button>
