--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -7,6 +7,8 @@
   <ul>
     <li *ngFor="let turnir of sviTurniri$ | async">
       <app-turnir [turnir]="turnir"></app-turnir>
+      <button (click)="prikaziPrijavljeneIgrace()">Prijavljeni ucesnici</button>
+      <button (click)="prijaviSeNaTurnir(turnir)">Prijavi se</button>
     </li>
   </ul>
   <!-- <h1>Svi igraci</h1>
