--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -5,6 +5,9 @@
 <!-- <button (click)="navigirajNaKorpu()" routerLink="/korpa">Korpa</button> -->
 <button (click)="navigirajNaPocetnu()" routerLink="">Pocetna</button>
 <button (click)="navigirajNaProfil()" routerLink="profil">Profil</button>
+<button (click)="navigirajNaBiranjeIgraca()" routerLink="sviIgraci">
+  Biraj igrace za tim
+</button>
 <button (click)="navigirajNaPrijavljivanje()" routerLink="Prijavljivanje">
   Prijavi se
 </button>
