--- a/frontend/src/app/preference/preference.component.html
+++ b/frontend/src/app/preference/preference.component.html
@@ -4,7 +4,7 @@
   <input
     type="number"
     id="potrebanBrojSlusalica"
-    [(ngModel)]="potrebanBrojSlusalica"
+    [(ngModel)]="zeljenePreference.potrebanBrojSlusalica"
     name="potrebanBrojSlusalica"
     min="0"
   />
@@ -14,7 +14,7 @@
   <input
     type="number"
     id="potrebanBrojRacunara"
-    [(ngModel)]="potrebanBrojRacunara"
+    [(ngModel)]="zeljenePreference.potrebanBrojRacunara"
     name="potrebanBrojRacunara"
     min="0"
   />
@@ -24,7 +24,7 @@
   <input
     type="number"
     id="potrebanBrojTastatura"
-    [(ngModel)]="potrebanBrojTastatura"
+    [(ngModel)]="zeljenePreference.potrebanBrojTastatura"
     name="potrebanBrojTastatura"
     min="0"
   />
@@ -34,7 +34,7 @@
   <input
     type="number"
     id="potrebanBrojMiseva"
-    [(ngModel)]="potrebanBrojMiseva"
+    [(ngModel)]="zeljenePreference.potrebanBrojMiseva"
     name="potrebanBrojMiseva"
     min="0"
   />
