--- a/frontend/src/app/prijava/prijava.component.html
+++ b/frontend/src/app/prijava/prijava.component.html
@@ -11,14 +11,10 @@
   </ul>
 </div>
 <h1>Prijave</h1>
-<div
-  *ngIf="
-    preferencePotrebanBrojSlusalica$ | async as preferencePotrebanBrojSlusalica
-  "
->
+<div *ngIf="preference$ | async as preference">
   <h1>Preferences</h1>
-  <p>Potreban broj slušalica: {{ preferencePotrebanBrojSlusalica }}</p>
+  <p>Potreban broj slušalica: {{ preference.potrebanBrojSlusalica }}</p>
+  <p>Potreban broj racunara: {{ preference.potrebanBrojRacunara }}</p>
+  <p>Potreban broj tastatura: {{ preference.potrebanBrojTastatura }}</p>
+  <p>Potreban broj miseva: {{ preference.potrebanBrojMiseva }}</p>
 </div>
-<button (click)="izaberiPreference()" routerLink="preference">
-  Izaberi preference tima
-</button>
