--- a/frontend/src/app/svi-igraci/svi-igraci.component.html
+++ b/frontend/src/app/svi-igraci/svi-igraci.component.html
@@ -1,6 +1,21 @@
 <h1>Svi igraci</h1>
-<ul>
+<label for="uneseniIgrac"> Unesite ime igraca</label>
+<input
+  type="text"
+  id="uneseniIgrac"
+  [(ngModel)]="uneseniIgrac"
+  name="uneseniIgrac"
+/>
+<button (click)="pretraziIgrace(uneseniIgrac)">Pretrazi</button>
+<ul *ngIf="!(pretragaIgraci$ | async)?.length">
   <li *ngFor="let igrac of sviIgraci$ | async">
+    <app-igrac [igrac]="igrac"></app-igrac>
+    <button (click)="dodajIgracaUtim(igrac)">Dodaj u tim</button>
+  </li>
+</ul>
+<h3>pretraga igraci</h3>
+<ul>
+  <li *ngFor="let igrac of pretragaIgraci$ | async">
     <app-igrac [igrac]="igrac"></app-igrac>
     <button (click)="dodajIgracaUtim(igrac)">Dodaj u tim</button>
   </li>
