--- a/frontend/src/app/kreiranje-turnira/kreiranje-turnira.component.html
+++ b/frontend/src/app/kreiranje-turnira/kreiranje-turnira.component.html
@@ -1,6 +1,6 @@
 <div>
   <h2>Unos podataka za Turnir</h2>
-  <form (submit)="submitForm()">
+  <form>
     <div class="form-group">
       <label for="naziv">Naziv:</label>
       <input
@@ -22,6 +22,16 @@
       />
     </div>
     <div class="form-group">
+      <label for="mestoOdrzavanja">mesto održavanja:</label>
+      <input
+        type="string"
+        id="mestoOdrzavanja"
+        name="mestoOdrzavanja"
+        [(ngModel)]="turnir.mestoOdrzavanja"
+        required
+      />
+    </div>
+    <div class="form-group">
       <label for="maxBrojUcesnika">Broj učesnika:</label>
       <input
         type="number"
@@ -31,6 +41,6 @@
         required
       />
     </div>
-    <button type="submit">Kreiraj Turnir</button>
+    <button (click)="kreirajTurnir()">Kreiraj Turnir</button>
   </form>
 </div>
