--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -17,20 +17,20 @@
   <button (click)="navigirajNaPocetnu()" routerLink="" class="nav-button">
     Početna
   </button>
-  <button
+  <!-- <button
     (click)="navigirajNaBiranjeIgraca()"
     routerLink="sviIgraci"
     class="nav-button"
   >
     Biraj igrače za tim
-  </button>
-  <button
+  </button> -->
+  <!-- <button
     (click)="izaberiPreference()"
     routerLink="preference"
     class="nav-button"
   >
     Izaberi preference tima
-  </button>
+  </button> -->
   <button
     (click)="navigirajNaPrijavu()"
     routerLink="prijava"
