--- a/frontend/src/app/search-bar/search-bar.component.html
+++ b/frontend/src/app/search-bar/search-bar.component.html
@@ -47,5 +47,5 @@
   </div>
 </form>
 <div class="form-group">
-  <button (click)="pretraziTurnire()">Pretraga</button>
+  <button (click)="filtrirajTurnire()">Pretraga</button>
 </div>
