--- a/frontend/src/app/search-bar/search-bar.component.html
+++ b/frontend/src/app/search-bar/search-bar.component.html
@@ -34,7 +34,6 @@
       class="form-control"
     />
   </div>
-
   <div class="form-group">
     <label for="krajnjiDatum">Krajnji datum:</label>
     <input
@@ -45,7 +44,31 @@
       class="form-control"
     />
   </div>
+
+  <div class="form-group">
+    <label for="pocetnaNagrada">Pocetna nagrada</label>
+    <input
+      type="number"
+      id="pocetnaNagrada"
+      name="pocetnaNagrada"
+      [(ngModel)]="pretragaPocetnaNagrada"
+      placeholder="donji opseg nagrade"
+      class="form-control"
+    />
+  </div>
+  <div class="form-group">
+    <label for="krajnjaNagrada">Krajnja nagrada </label>
+    <input
+      type="number"
+      id="krajnjaNagrada"
+      name="krajnjaNagrada"
+      [(ngModel)]="pretragaKrajnjaNagrada"
+      placeholder="donji opseg nagrade"
+      class="form-control"
+    />
+  </div>
 </form>
+
 <div class="form-group">
   <button (click)="filtrirajTurnire()">Pretraga</button>
 </div>
