--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -6,13 +6,13 @@
   <ul>
     <li *ngFor="let turnir of sviTurniri$ | async">
       <app-turnir [turnir]="turnir"></app-turnir>
-      <button (click)="prikaziPrijavljeneIgrace(turnir)">
+      <!-- <button (click)="prikaziPrijavljeneIgrace(turnir)">
         Prijavljeni učesnici
-      </button>
+      </button> -->
       <button (click)="prijaviSeNaTurnir(turnir)">Prijavi tim</button>
       <button (click)="obrisiTurnir(turnir.id)">Obrisi turnir</button>
       <button (click)="prikaziPrijavljeneTimove(turnir.id)">
-        prijavljeni timovi
+        Prijavljeni timovi
       </button>
     </li>
   </ul>
@@ -27,9 +27,9 @@
   <ul *ngIf="filtriraniTurniri && filtriraniTurniri.length > 0">
     <li *ngFor="let turnir of filtriraniTurniri">
       <app-turnir [turnir]="turnir"></app-turnir>
-      <button (click)="prikaziPrijavljeneIgrace(turnir)">
+      <!-- <button (click)="prikaziPrijavljeneIgrace(turnir)">
         Prijavljeni učesnici
-      </button>
+      </button> -->
       <button (click)="prijaviSeNaTurnir(turnir)">Prijavi se</button>
       <button (click)="obrisiTurnir(turnir.id)">Obrisi turnir</button>
       <button (click)="prikaziPrijavljeneTimove(turnir.id)">
