--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -45,4 +45,11 @@
   >
     Login
   </button>
+  <button
+    (click)="navigirajNaRegistraciju()"
+    routerLink="Registracija"
+    class="nav-button"
+  >
+    Registracija
+  </button>
 </div>
