--- a/frontend/src/app/registracija/registracija.component.html
+++ b/frontend/src/app/registracija/registracija.component.html
@@ -1,1 +1,81 @@
-<p>registracija works!</p>
+<form>
+  <div>
+    <label for="tipRegistracije">Izaberite tip registracije:</label>
+    <input
+      type="radio"
+      id="igrac"
+      name="tipRegistracije"
+      value="igrac"
+      [(ngModel)]="tipRegistracije"
+    />
+    Igrač
+    <input
+      type="radio"
+      id="organizator"
+      name="tipRegistracije"
+      value="organizator"
+      [(ngModel)]="tipRegistracije"
+    />
+    Organizator
+  </div>
+
+  <div *ngIf="tipRegistracije === 'organizator'">
+    <div>
+      <label for="korisnickoIme">Korisničko ime:</label>
+      <input
+        type="text"
+        id="korisnickoIme"
+        [(ngModel)]="organizator.korisnickoIme"
+        name="korisnickoIme"
+        required
+      />
+    </div>
+    <div>
+      <label for="lozinka">lozinka</label>
+      <input
+        type="password"
+        id="lozinka"
+        [(ngModel)]="organizator.lozinka"
+        name="lozinka"
+        required
+      />
+    </div>
+  </div>
+
+  <div *ngIf="tipRegistracije === 'igrac'">
+    <div>
+      <label for="korisnickoIme">Korisničko ime:</label>
+      <input
+        type="text"
+        id="korisnickoIme"
+        [(ngModel)]="igrac.korisnickoIme"
+        name="korisnickoIme"
+        required
+      />
+    </div>
+    <div>
+      <label for="ime">Ime:</label>
+      <input type="text" id="ime" [(ngModel)]="igrac.ime" name="ime" required />
+    </div>
+    <div>
+      <label for="prezime">Prezime:</label>
+      <input
+        type="text"
+        id="prezime"
+        [(ngModel)]="igrac.prezime"
+        name="prezime"
+        required
+      />
+    </div>
+    <div>
+      <label for="vodjaTima">Vodja tima:</label>
+      <input
+        type="checkbox"
+        id="vodjaTima"
+        [(ngModel)]="igrac.vodjaTima"
+        name="vodjaTima"
+      />
+    </div>
+  </div>
+  <button (click)="registrujSe()">Registruj se</button>
+</form>
