--- a/frontend/src/app/timovi-na-turniru/timovi-na-turniru.component.html
+++ b/frontend/src/app/timovi-na-turniru/timovi-na-turniru.component.html
@@ -3,6 +3,7 @@
     <h2>Prijavljeni timovi</h2>
     <li *ngFor="let prijava of prijave$ | async">
       <h3>{{ prijava.nazivTima }}</h3>
+      <button (click)="izbaciTimSaTurnira(prijava.id)">Izbaci tim</button>
       <app-igrac
         *ngFor="let igrac of prijava.igraci"
         [igrac]="igrac"
