--- a/frontend/src/app/turnir/turnir.component.html
+++ b/frontend/src/app/turnir/turnir.component.html
@@ -2,5 +2,7 @@
   <h2>{{ turnir.naziv }}</h2>
   <p>Datum održavanja: {{ turnir.datumOdrzavanja }}</p>
   <p>Mesto održavanja: {{ turnir.mestoOdrzavanja }}</p>
-  <p>Broj učesnika: {{ turnir.maxBrojUcesnika }}</p>
+  <p>Nagrada: {{ turnir.nagrada }}$</p>
+  <p>Maksimalni broj ucesnika: {{ turnir.maxBrojTimova }}</p>
+  <p>trenutni broj timova: {{ turnir.trenutniBrojTimova }}</p>
 </div>
