--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -38,11 +38,7 @@
   >
     Pregledaj prijavu
   </button>
-  <button
-    (click)="navigirajNaPrijavljivanje()"
-    routerLink="Prijavljivanje"
-    class="nav-button"
-  >
+  <button (click)="navigirajNaLogin()" routerLink="login" class="nav-button">
     Login
   </button>
   <button
