--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -18,9 +18,9 @@
       name="lozinka"
       required
     />
-    <label for="role">I am:</label>
+    <label for="role">Prijavi se kao</label>
     <input
-      type="checkbox"
+      type="radio"
       id="igrac"
       [(ngModel)]="isIgrac"
       name="role"
@@ -29,7 +29,7 @@
     <label for="igrac">Igrac</label>
 
     <input
-      type="checkbox"
+      type="radio"
       id="organizator"
       [(ngModel)]="isOrganizator"
       name="role"
