--- a/frontend/src/app/profil/profil.component.html
+++ b/frontend/src/app/profil/profil.component.html
@@ -7,5 +7,8 @@
 </div>
 
 <ng-template #loading>
-  <p>Loading...</p>
+  <br />
+  <br />
+  <br />
+  <h2>Morate da se prijavite da biste videli svoj profil</h2>
 </ng-template>
