--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -41,6 +41,9 @@
   <button (click)="navigirajNaLogin()" routerLink="login" class="nav-button">
     Login
   </button>
+  <button (click)="OdjaviSe()" routerLink="" class="nav-button">
+    Odjavi se
+  </button>
   <button
     (click)="navigirajNaRegistraciju()"
     routerLink="Registracija"
