--- a/frontend/src/app/profil/profil.component.html
+++ b/frontend/src/app/profil/profil.component.html
@@ -1,22 +1,15 @@
-<!-- profil.component.html -->
-
-<div *ngIf="trenutnoPrijavljeniIgrac$ | async as igrac; else organizator">
-  <h2>Trenutno prijavljeni igrac</h2>
-  <p>Ime: {{ igrac.ime }}</p>
-  <p>Prezime: {{ igrac.prezime }}</p>
-</div>
-<ng-template #organizator>
-  <div
-    *ngIf="trenutnoPrijavljeniOrganizator$ | async as organizator; else loading"
-  >
-    <h2>Trenutno prijavljeni organizator</h2>
-    <p>korisnicko ime: {{ organizator.korisnickoIme }}</p>
+<div *ngIf="trenutnoPrijavljeniKorisnik$ | async as prijavljeniKorisnik">
+  <h1>Dobrodošli, {{ prijavljeniKorisnik.korisnickoIme }}</h1>
+  <div *ngIf="prijavljeniKorisnik.role === 'igrac'">
+    <!-- Content for igrac role -->
+    <p>Ovo je profil igrača.</p>
   </div>
-</ng-template>
-
-<ng-template #loading>
-  <br />
-  <br />
-  <br />
-  <h2>Niste prijavljeni. Prijavite se da biste videli svoj proifl.</h2>
-</ng-template>
+  <div *ngIf="prijavljeniKorisnik.role === 'organizator'">
+    <!-- Content for organizator role -->
+    <p>Ovo je profil organizatora.</p>
+  </div>
+</div>
+<div *ngIf="!(trenutnoPrijavljeniKorisnik$ | async)">
+  <!-- Content to display when no user is logged in -->
+  <p>Morate biti prijavljeni da biste videli profil.</p>
+</div>
